# multi-nodes-programming

./: CMakeCache.txt  CMakeLists.txt  README.md  Report.docx  analysis.sh
include/: hw4.h
src/: directory_scanner.cpp  master.cpp  start_here.cpp  worker.cpp
